[package]
name = "conveyor_line_inc"
version = "0.0.6"
edition = "2021"
authors = ["gwabba"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.5"
regex = "1.10.2"
crossterm = "0.27.0"
once_cell = "1.19.0"
ron = "0.8.1"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.8"
bimap = "0.6.3"
rlua_serde = "0.4.0"
json = "0.12.4"
tui = "0.19.0"
linked-hash-map = "0.5.6"
mlua = { version = "0.9.6", features = ["lua54", "send", "serialize", "vendored"] }
